--- a/docker/gpu/Dockerfile
+++ b/docker/gpu/Dockerfile
@@ -1,67 +1,99 @@
-FROM --platform=$BUILDPLATFORM nvidia/cuda:12.8.0-cudnn-runtime-ubuntu24.04
-# Set non-interactive frontend
+FROM nvidia/cuda:12.8.0-cudnn-runtime-ubuntu24.04 AS builder
+
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install Python and other dependencies
-RUN apt-get update && apt-get install -y \
+ARG TZ=PRC
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
+    sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list && \
+    sed -i 's/security.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3.10 \
+    python3-venv \
+    git \
+    curl \
+    g++ \
+    ca-certificates \
+    # libsndfile1 if needed by deps during build
+ && apt-get autoremove -y --purge \
+ && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+
+# Configure pip to use Tsinghua University mirror globally for this stage
+RUN mkdir -p /root/.config/pip && \
+    echo "[global]" > /root/.config/pip/pip.conf && \
+    echo "index-url = https://pypi.tuna.tsinghua.edu.cn/simple/" >> /root/.config/pip/pip.conf && \
+    echo "[install]" >> /root/.config/pip/pip.conf && \
+    echo "trusted-host = pypi.tuna.tsinghua.edu.cn" >> /root/.config/pip/pip.conf
+
+# Copy necessary project files for building from the build context root
+COPY pyproject.toml ./pyproject.toml
+COPY README.md ./README.md
+COPY api ./api
+
+# Create virtual environment
+RUN python3.10 -m venv .venv
+
+# Activate venv and upgrade pip, setuptools, wheel
+RUN . .venv/bin/activate && \
+    pip install -v --no-cache-dir --upgrade pip setuptools wheel
+
+# Install project dependencies with verbose output and cache mount
+RUN --mount=type=cache,target=/root/.cache/pip \
+    . .venv/bin/activate && \
+    pip install -v --no-cache-dir .[gpu]
+
+FROM nvidia/cuda:12.8.0-cudnn-runtime-ubuntu24.04
+
+ENV DEBIAN_FRONTEND=noninteractive
+
+ARG TZ=PRC
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
+    sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list && \
+    sed -i 's/security.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
     python3.10 \
     python3-venv \
     espeak-ng \
     espeak-ng-data \
-    git \
     libsndfile1 \
-    curl \
     ffmpeg \
-    g++ \
+    ca-certificates \
+ && apt-get autoremove -y --purge \
  && apt-get clean && rm -rf /var/lib/apt/lists/* \
  && mkdir -p /usr/share/espeak-ng-data \
  && ln -s /usr/lib/*/espeak-ng-data/* /usr/share/espeak-ng-data/
 
-# Install UV using the installer script
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh && \
-    mv /root/.local/bin/uv /usr/local/bin/ && \
-    mv /root/.local/bin/uvx /usr/local/bin/ 
-
-# Create non-root user and set up directories and permissions
-RUN useradd -m -u 1001 appuser && \
-    mkdir -p /app/api/src/models/v1_0 && \
-    chown -R appuser:appuser /app
-    
-USER appuser
+RUN useradd -m -u 1001 appuser
 WORKDIR /app
 
-# Copy dependency files
-COPY --chown=appuser:appuser pyproject.toml ./pyproject.toml
+# Copy the virtual environment from the builder stage
+COPY --chown=appuser:appuser --from=builder /app/.venv ./.venv
 
-ENV PHONEMIZER_ESPEAK_PATH=/usr/bin \
-    PHONEMIZER_ESPEAK_DATA=/usr/share/espeak-ng-data \
-    ESPEAK_DATA_PATH=/usr/share/espeak-ng-data
+# Copy project files for runtime
+COPY api ./api
+COPY web ./web
+COPY docker/scripts/ ./docker/scripts
+RUN chmod +x ./docker/scripts/entrypoint.sh
 
-# Install dependencies with GPU extras (using cache mounts)
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv venv --python 3.10 && \
-    uv sync --extra gpu
+USER appuser
 
-# Copy project files including models
-COPY --chown=appuser:appuser api ./api
-COPY --chown=appuser:appuser web ./web
-COPY --chown=appuser:appuser docker/scripts/ ./
-RUN chmod +x ./entrypoint.sh
-
-
-# Set all environment variables in one go
+# Set environment variables
 ENV PYTHONUNBUFFERED=1 \
     PYTHONPATH=/app:/app/api \
     PATH="/app/.venv/bin:$PATH" \
-    UV_LINK_MODE=copy \
-    USE_GPU=true 
+    USE_GPU=true \
+    PHONEMIZER_ESPEAK_PATH=/usr/bin \
+    PHONEMIZER_ESPEAK_DATA=/usr/share/espeak-ng-data \
+    ESPEAK_DATA_PATH=/usr/share/espeak-ng-data
 
 ENV DOWNLOAD_MODEL=true
-# Download model if enabled
-RUN if [ "$DOWNLOAD_MODEL" = "true" ]; then \
-    python download_model.py --output api/src/models/v1_0; \
+RUN mkdir -p api/src/models/v1_0 && \
+    if [ "$DOWNLOAD_MODEL" = "true" ]; then \
+    python docker/scripts/download_model.py --output api/src/models/v1_0; \
     fi
 
 ENV DEVICE="gpu"
-# Run FastAPI server through entrypoint.sh
-CMD ["./entrypoint.sh"]
+CMD ["./docker/scripts/entrypoint.sh"]
